crates/swc_ecma_parser/tests/typescript-errors/type-only-import-equals-decl/namespace/input.ts.stderr
error: Expected 'from', got '='
 --> $DIR/tests/typescript-errors/type-only-import-equals-decl/namespace/input.ts:1:25
  |
1 | import type * as MyType = require('commonjs-package')
  |                         ^

